JS logic part is done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,18 +242,24 @@ main .wrapper {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  filter: blur(15px);
-  transition: filter 3s ease;
+  filter: blur(20px);
+  transition: filter 5s ease;
 }
 
 .percentage {
   color: #FFF;
   font-size: 50px;
   position: absolute;
+  opacity: 1;
+  transition: opacity 5s ease;
 }
 
 .blur-out {
   filter: blur(0px);
+}
+
+.opacity-out {
+  opacity: 0;
 }
 
 /*=================================
