--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,7 @@ html {
 }
 
 body {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: sans-serif;
 }
@@ -232,10 +233,19 @@ main .wrapper {
   max-width: 100%;
   width: 100%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -246,8 +256,13 @@ main .wrapper {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-filter: blur(20px);
   filter: blur(20px);
+  -webkit-transition: -webkit-filter 3s ease;
+  transition: -webkit-filter 3s ease;
+  -o-transition: filter 3s ease;
   transition: filter 3s ease;
+  transition: filter 3s ease, -webkit-filter 3s ease;
 }
 
 .percentage {
@@ -255,10 +270,13 @@ main .wrapper {
   font-size: 50px;
   position: absolute;
   opacity: 1;
+  -webkit-transition: opacity 3s ease;
+  -o-transition: opacity 3s ease;
   transition: opacity 3s ease;
 }
 
 .blur-out {
+  -webkit-filter: blur(0px);
   filter: blur(0px);
 }
 
